--- a/src/static/style.css
+++ b/src/static/style.css
@@ -202,15 +202,15 @@ a {
 
 .custom-print {
     position: absolute !important;
-    margin-top: 90px;
-    margin-left: 330px;
+    margin-top: 370px;
+    margin-left: 110px;
     z-index: 1;
 }
 
 .custom-print-2 {
     position: absolute !important;
     margin-top: 230px;
-    margin-left: 490px;
+    margin-left: 455px;
     z-index: 1;
 }
 
@@ -282,3 +282,60 @@ Licence: <a href="https://www.os-templates.com/template-terms">Website Template 
 .ant-table-thead > tr > th, .ant-table-tbody > tr > td, .ant-table tfoot > tr > th, .ant-table tfoot > tr > td {
     padding: 5px 16px !important;
 }
+
+/*  */
+
+
+/* td,
+th,
+tr,
+table {
+    border-top: 1px solid #BDBDBD;
+    border-collapse: collapse;
+    font-size: 10px;
+} */
+.tr-custom-table-hoadon {
+    border-top: 1px solid #BDBDBD;
+    border-collapse: collapse;
+    font-size: 10px;
+}
+
+td.description,
+th.description {
+    width: 75px;
+    max-width: 75px;
+    font-size: 10px;
+}
+
+td.quantity,
+th.quantity {
+    width: 40px;
+    max-width: 40px;
+    word-break: break-all;
+    font-size: 10px;
+}
+
+td.price,
+th.price {
+    width: 40px;
+    max-width: 40px;
+    word-break: break-all;
+    font-size: 12px;
+}
+
+.centered {
+    text-align: center;
+    align-content: center;
+    font-size: 12px;
+}
+
+.ticket {
+    width: 350px;
+    max-width: 350px;
+}
+
+img {
+    max-width: inherit;
+    width: inherit;
+}
+
